<resources>
    <string name="app_name">LokaCar</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="entrez_votre_email">Entrez votre email</string>
    <string name="se_connecter">Se connecter</string>
    <string name="entrez_votre_mot_de_passe">Entrez votre mot de passe</string>
    <string name="bienvenue_chez_lokacar">Bienvenue chez LokaCar</string>
    <string name="annuler">Annuler</string>
    <string name="tentatives_restantes">Tentatives restantes :</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="btninserer">btnInserer</string>
    <string name="marque_du_v_hicule">Marque du véhicule</string>
    <string name="mod_le">Modèle</string>
    <string name="description_du_v_hicule">Description du véhicule</string>
    <string name="immatriculation">Immatriculation</string>
    <string name="tarif_journalier">Tarif journalier</string>
    <string name="ajouter">Ajouter</string>
    <string name="inserer">Inserer</string>
    <string name="ajouter_un_v_icule">Ajouter un véhicule</string>
    <string name="supprimer">Supprimer</string>
    <string name="detail">"  Détail du véhicule"</string>
    <string name="ajout">"  Ajouter un véhicule"</string>
    <string name="liste">"  Liste des véhicules"</string>
    <string name="bienvenue">"  Bienvenue"</string>
    <string name="marque_du_v_hicule_detail">Marque du véhicule :</string>
    <string name="mod_le_du_v_hicule">Modèle du véhicule :</string>
    <string name="description_du_v_hicule_detail">Description du véhicule :</string>
    <string name="immatriculation_du_v_hicule">Immatriculation du véhicule :</string>
    <string name="tarif_journalier_detail">Tarif journalier :</string>
    <string name="d_tail_de_votre_v_hicule">Détail de votre véhicule :</string>
    <string name="supprimer_ce_v_hicule">Supprimer ce véhicule</string>
    <string name="icone_accueil_vehicules">Accueil véhicules</string>
    <string name="icone_accueil_clients">Accueil clients</string>
    <string name="menu_se_deconnecter">Se déconnecter</string>
    <string name="ajouterclient">Ajouter un client</string>
    <string name="coordonn_es_du_client">Coordonnées du client</string>
    <string name="nom">Nom :</string>
    <string name="pr_nom">Prénom :</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone :</string>
    <string name="email">Email :</string>
    <string name="supprimerclient">Supprimer ce client</string>
    <string name="adresse">Adresse :</string>
    <string name="cp">CP :</string>
    <string name="ville">Ville :</string>
    <string name="listeclients">"  Liste des clients"</string>
    <string name="détailduclient">"  Détail du client"</string>
    <string name="nomaffich">Nom :</string>
    <string name="prenomaffich">Prenom :</string>
    <string name="t_l_phone">Téléphone :</string>
    <string name="emailaffich">Email :</string>
    <string name="adresseaffich">Adresse :</string>
    <string name="code_postal">Code postal :</string>
    <string name="villeaffich">Ville :</string>
    <string name="prix_par_jour_en_euros">Prix par jour (en euros) :</string>
    <string name="immatriculationaffich">Immatriculation :</string>
    <string name="description">Description :</string>
    <string name="mod_leaffich">Modèle :</string>
    <string name="marque">Marque :</string>
    <string name="ajoutclient">"  Ajouter un client"</string>
    <string name="prenomclicli">Prenom</string>
    <string name="nomclicli">Nom</string>
</resources>
