<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.eni.lokacar.activities.DetailClientActivity">


    <TextView
        android:id="@+id/tv_client_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coordonn_es_du_client"
        android:textStyle="bold"
        android:textSize="27sp"
        android:paddingBottom="25dp"
        />

    <TextView
        android:id="@+id/affiche_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomaffich"
        android:layout_below="@+id/tv_client_detail"
        android:textColor="#dcf763"
        />

    <TextView
        android:id="@+id/tv_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_below="@id/affiche_nom"
        android:paddingBottom="10dp"
        />

    <TextView
        android:id="@+id/affiche_prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prenomaffich"
        android:layout_below="@+id/tv_nom"
        android:textColor="#dcf763"
        />

    <TextView
        android:id="@+id/tv_prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pr_nom"
        android:layout_below="@id/affiche_prenom"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        />

    <TextView
        android:id="@+id/affiche_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_l_phone"
        android:layout_below="@+id/tv_prenom"
        android:textColor="#dcf763"
        />

    <TextView
        android:id="@+id/tv_telephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_ro_de_t_l_phone"
        android:layout_below="@id/affiche_tel"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        />

    <TextView
        android:id="@+id/affiche_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailaffich"
        android:layout_below="@+id/tv_telephone"
        android:textColor="#dcf763"
        />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@id/affiche_email"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        />

    <TextView
        android:id="@+id/affiche_adresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adresseaffich"
        android:layout_below="@+id/tv_email"
        android:textColor="#dcf763"
        />

    <TextView
        android:id="@+id/tv_adresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adresse"
        android:layout_below="@id/affiche_adresse"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        />

    <TextView
        android:id="@+id/affiche_cp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code_postal"
        android:layout_below="@+id/tv_adresse"
        android:textColor="#dcf763"
        />

    <TextView
        android:id="@+id/tv_codepostal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cp"
        android:layout_below="@id/affiche_cp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        />

    <TextView
        android:id="@+id/affiche_ville"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/villeaffich"
        android:layout_below="@+id/tv_codepostal"
        android:textColor="#dcf763"
        />

    <TextView
        android:id="@+id/tv_ville"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ville"
        android:layout_below="@id/affiche_ville"
        android:textStyle="bold"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/btn_supp_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/supprimerclient"
        style="@style/buttonstyle"
        />



</RelativeLayout>