<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.LoginActivity">


    <TextView
        android:id="@+id/tv_bienvenue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenue_chez_lokacar"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        />

    <ImageView
        android:id="@+id/imageLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/key"
        android:layout_below="@+id/tv_bienvenue"
        android:paddingBottom="20dp"
        />

    <EditText
        android:id = "@+id/et_email"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:hint="@string/entrez_votre_email"
        android:layout_below="@id/imageLogin"
        android:inputType="textEmailAddress"
        android:backgroundTint="#bfb7b6"
        />

    <EditText
        android:id = "@+id/et_mdp"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:hint="@string/entrez_votre_mot_de_passe"
        android:layout_below="@id/et_email"
        android:inputType = "textPassword"
        android:backgroundTint="#bfb7b6"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_mdp"
        android:text="@string/se_connecter"
        android:onClick="login"
        style="@style/buttonstyle"
        />

</RelativeLayout>